--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,156 @@
 .App {
+  position: relative;
+  max-width: 1080px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Header-color-block {
+  height: 61px;
+  background-color: #7abcac;
+}
+
+.Header {
+  border: 4px solid #000000;
+  max-width: 620px;
+  margin: 0 auto;
   text-align: center;
+  text-transform: uppercase;
+  margin-top: -25px;
+  margin-bottom: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Header-h1 {
+  font-weight: 900;
+  font-size: 48px;
+  padding: 45px 40px 20px 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Header-h2 {
+  background-color: #000000;
+  width: 80%;
+  font-size: 24px;
+  padding: 10px 10px 10px 10px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  font-weight: bold;
+  color: #ffffff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Fancy-line {
+  display: flex;
+  height: 10px;
+  margin: 5px 0 5px 0;
+  margin-bottom: 25px;
+  align-items: center;
+}
+
+.Small-green-block {
+  width: 72px;
+  height: 10px;
+  background-color: #7abcac;
+}
+
+.Gray-line {
+  width: 100%;
+  height: 4px;
+  background-color: #dcdcdc;
+}
+
+.Block-title {
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 24px;
+}
+
+.Links-and-about-me {
+  display: flex;
+  gap: 50px;
+}
+
+.Left-block {
+  max-width: 200px;
+  flex: 1;
+}
+
+.Right-block {
+  flex: 3;
+}
+
+.Link-text {
+  margin-left: 25px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 18.75px;
+}
+
+.Content-wrap {
+  flex: 1.5;
+  min-width: 320px;
+}
+
+.Content {
+  margin-top: 10px;
+}
+
+.Line-wrap {
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.List-item {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Soc-logo {
+  width: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Soc-link {
+  text-decoration: none;
+  color: #000000;
+}
+
+.Text-wrap {
+  display: inline-block;
+}
+
+.Education-personal-technical {
+  display: flex;
+  gap: 50px;
+}
+
+.Gray-line-short {
+  width: 212px;
+  height: 4px;
+  margin: 10px 0 10px 0;
+  background-color: #dcdcdc;
+}
+
+.My-skill {
+  margin: 15px 0 15px 0;
+}
+
+.My-skill-para {
+  border-radius: 10px;
+  display: inline;
+  padding: 0 20px 0 20px;
+  text-transform: uppercase;
+}
+
+.My-skill--perfect {
+  background-color: #d8da79;
+}
+
+.My-skill--good {
+  background-color: #7abcac;
+}
+
+.My-skill--viable {
+  background-color: #c29486;
 }
