--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  font-family: 'Roboto';
 }
 
 .Header-color-block {
@@ -88,6 +89,7 @@
 .Content-wrap {
   flex: 1.5;
   min-width: 320px;
+  margin-top: 25px;
 }
 
 .Content {
@@ -123,6 +125,7 @@
 .Education-personal-technical {
   display: flex;
   gap: 50px;
+  font-weight: 600;
 }
 
 .Gray-line-short {
@@ -143,14 +146,162 @@
   text-transform: uppercase;
 }
 
-.My-skill--perfect {
+.My-skill-perfect {
   background-color: #d8da79;
 }
 
-.My-skill--good {
+.My-skill-good {
   background-color: #7abcac;
 }
 
-.My-skill--viable {
+.My-skill-viable {
   background-color: #c29486;
+}
+
+.Work-exp-wrap {
+  display: flex;
+  gap: 50px;
+}
+
+.Work-exp-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 25px;
+}
+
+.Work-exp-title {
+  text-align: center;
+  line-height: 29px;
+  font-weight: 300;
+}
+
+.Bold-title {
+  font-weight: 600;
+}
+
+.Work-exp-about {
+  font-weight: 600;
+  margin-top: 25px;
+}
+
+.Work-exp-tasks {
+  padding: 15px 0 0 25px;
+  font-weight: 600;
+}
+
+.Footer {
+  display: flex;
+  gap: 50px;
+  padding: 50px 0 25px 0;
+  justify-content: space-around;
+}
+
+.Footer-title {
+  width: 248px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #000000;
+  color: #ffffff;
+  text-align: center;
+  padding: 5px 0 5px 0;
+  font-weight: 600;
+  font-size: 26px;
+}
+
+.Footer-block-details {
+  margin-top: 15px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.Footer-block-link {
+  text-decoration: none;
+  color: #000000;
+}
+
+.Footer-block-link:hover {
+  color: #7abcac;
+}
+
+.Gray-line-full {
+  width: 100%;
+  height: 4px;
+  background-color: #dcdcdc;
+  margin-top: 50px;
+}
+@media screen and (max-width: 1110px) {
+  .App {
+    width: 80%;
+    margin-left: 10%;
+  }
+
+  .Links-and-about-me {
+    flex-wrap: wrap;
+    gap: 0;
+  }
+
+  .Education-personal-technical {
+    flex-wrap: wrap;
+  }
+
+  .Work-exp-tasks {
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  .Work-exp-wrap {
+    flex-wrap: wrap;
+    gap: 0;
+  }
+
+  .Work-exp-wrap .Work-exp-block {
+    padding-bottom: 15px;
+  }
+
+  .Work-exp-wrap .Work-exp-block:nth-child(2) {
+    padding-bottom: 15px;
+    padding-top: 15px;
+    border-bottom: 2px solid gray;
+    border-top: 2px solid gray;
+  }
+
+  .Work-exp-wrap .Work-exp-block:nth-child(3) {
+    margin-top: 15px;
+  }
+
+  .Left-block {
+    min-width: 100%;
+    margin-bottom: 0;
+  }
+
+  .Footer {
+    flex-wrap: wrap;
+    gap: 25px;
+  }
+}
+
+@media screen and (max-width: 885px) {
+  .personal-info-grid {
+    grid-template:
+      'a ' auto
+      'b ' auto
+      'c ' auto
+      'd ' auto
+      'e ' auto / 1fr;
+  }
+
+  .work-exp-grid,
+  .footer {
+    grid-template:
+      'a ' auto
+      'b ' auto
+      'c ' auto/ 1fr;
+  }
+
+  .work-exp__center {
+    border: none;
+    border-top: 2px solid #dcdcdc;
+    padding-top: 25px;
+  }
 }
