--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,7 @@
   flex-direction: column;
   margin: 0;
   padding: 0;
+  margin-top: 10px;
   list-style-type: none;
 }
 
@@ -117,7 +118,6 @@
   text-decoration: none;
   color: #000000;
 }
-
 
 .Education-personal-technical {
   display: flex;
